--- a/styles.css
+++ b/styles.css
@@ -44,11 +44,12 @@ header ul{
 
 .btn-green{
     background-color: rgb(26, 219, 0);
-    padding: 7px;
+    padding: 8px 20px;
     border-radius: 6px;
     border: 0;
     color: white;
     margin-right: 40px;
+    font-weight: bold;
 }
 
 .hero{
@@ -234,9 +235,47 @@ header ul{
 }
 
 .partners{
-    width: 100px;
-    height: 110%;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
+
+/* Section 8 Footer */
+
+#footer{
+    text-align: center;
+    margin-top: 20px;
+    background-color: rgb(230, 230, 230);
+}
+#footer h1{
+    text-align: center;
+    margin: auto;
+    padding-top: 30px;
+    width: 70%;
+}
+
+#footer button{
+    margin-top: 30px;
+    margin-bottom: 40px;
+    padding: 15px 20px;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.last{
+    background-color: black;
+    padding: 30px 0;
+    color: white;
+    font-weight: bold;
+}
+
+.last a{
+    color: rgb(57, 252, 32);
+    text-decoration: underline;
+}
+
 
 /* Media Queries */
 @media (max-width: 920px){
